tests/liquid/pos/objects/update-00.js

/*@ foo :: ({x: number}) => void */ 
function foo(o) {
  o.x = 10;
}
