tests/liquid/neg/simple/this-00.js
/*@ foo :: () => void */

function foo () {

  this = 1;

}
